plugins/groovy/testdata/highlighting/duplicateNamesInTheFile/AliasAndStaticImport.groovy
import java.util.Calendar as Date
<error descr="Name 'Date' is already defined in file">import static foo.Bar.Date</error>